Adding feature compilation
Added feature toggle for CLI flags.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,9 @@ name = "random_password"
 version = "0.1.3"
 authors = ["Brandon Potter <bmpotter13@gmail.com>"]
 
+[features]
+default = []
+cli_opts = []
+
 [dependencies]
 rand = "0.5.5"
